// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Cascader > options 1`] = `<div />`;

exports[`Cascader > options with format 1`] = `<div />`;

exports[`Cascader > options with valueKey/textKey/childrenKey 1`] = `<div />`;

exports[`Cascader > value 1`] = `<div />`;

exports[`Cascader > visible true 1`] = `
<div>
  <div
    class="nut-overlay"
    style="z-index: 1000;"
  />
  <div
    class="nut-popup nut-popup-round nut-popup-bottom"
    style="z-index: 1000;"
  >
    <div
      class="nut-cascader"
    >
      <div
        class="nut-tabs nut-tabs-horizontal"
      >
        <div
          class="nut-tabs-titles nut-tabs-titles-line nut-tabs-titles-scrollable"
        >
          <div
            class="nut-tabs-titles-item"
          >
            <div
              class="nut-tabs-titles-item-line nut-tabs-titles-item-line-horizontal"
            />
            <div
              class="nut-tabs-titles-item-text"
            >
              福建
            </div>
          </div>
          <div
            class="nut-tabs-titles-item"
          >
            <div
              class="nut-tabs-titles-item-line nut-tabs-titles-item-line-horizontal"
            />
            <div
              class="nut-tabs-titles-item-text"
            >
              福州
            </div>
          </div>
          <div
            class="nut-tabs-titles-item nut-tabs-titles-item-active"
          >
            <div
              class="nut-tabs-titles-item-line nut-tabs-titles-item-line-horizontal"
            />
            <div
              class="nut-tabs-titles-item-text"
            >
              鼓楼区
            </div>
          </div>
        </div>
        <div
          class="nut-tabs-content-wrap"
        >
          <div
            class="nut-tabs-content"
            style="transform: translate3d(-200%, 0, 0); transition-duration: 300ms;"
          >
            <div
              class="nut-tabpane"
            >
              <div
                class="nut-cascader-pane"
              >
                <div
                  class="nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    浙江
                  </div>
                </div>
                <div
                  class="disabled nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    湖南
                  </div>
                </div>
                <div
                  class="active nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    福建
                  </div>
                  <svg
                    class="nut-icon nut-icon-Check nut-cascader-icon-check"
                    viewBox="0 0 1024 1024"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m942.94 336.9 44.34-44.33-88.67-88.67-44.32 44.35-457.23 457.2-248.25-248.2-44.32-44.37-88.67 88.67 44.35 44.33 248.22 248.24 44.35 44.33 44.32 44.34 44.33-44.34 44.34-44.33L942.92 336.9z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="nut-tabpane"
            >
              <div
                class="nut-cascader-pane"
              >
                <div
                  class="active nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    福州
                  </div>
                  <svg
                    class="nut-icon nut-icon-Check nut-cascader-icon-check"
                    viewBox="0 0 1024 1024"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m942.94 336.9 44.34-44.33-88.67-88.67-44.32 44.35-457.23 457.2-248.25-248.2-44.32-44.37-88.67 88.67 44.35 44.33 248.22 248.24 44.35 44.33 44.32 44.34 44.33-44.34 44.34-44.33L942.92 336.9z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
              </div>
            </div>
            <div
              class="nut-tabpane"
            >
              <div
                class="nut-cascader-pane"
              >
                <div
                  class="active nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    鼓楼区
                  </div>
                  <svg
                    class="nut-icon nut-icon-Check nut-cascader-icon-check"
                    viewBox="0 0 1024 1024"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="m942.94 336.9 44.34-44.33-88.67-88.67-44.32 44.35-457.23 457.2-248.25-248.2-44.32-44.37-88.67 88.67 44.35 44.33 248.22 248.24 44.35 44.33 44.32 44.34 44.33-44.34 44.34-44.33L942.92 336.9z"
                      fill="currentColor"
                    />
                  </svg>
                </div>
                <div
                  class="nut-cascader-item"
                >
                  <div
                    class="nut-cascader-item-title"
                  >
                    台江区
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Cascader > visible true 2`] = `
<div
  class="active nut-cascader-item"
>
  <div
    class="nut-cascader-item-title"
  >
    鼓楼区
  </div>
  <svg
    class="nut-icon nut-icon-Check nut-cascader-icon-check"
    viewBox="0 0 1024 1024"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m942.94 336.9 44.34-44.33-88.67-88.67-44.32 44.35-457.23 457.2-248.25-248.2-44.32-44.37-88.67 88.67 44.35 44.33 248.22 248.24 44.35 44.33 44.32 44.34 44.33-44.34 44.34-44.33L942.92 336.9z"
      fill="currentColor"
    />
  </svg>
</div>
`;
